From Callback Hell to Promises - Ex 1 with THEN

--- a/index.html
+++ b/index.html
@@ -10,27 +10,7 @@
 
 <h1>Asynchronous JavaScript</h1>
 
-
-<script>
-    /*
-    const second = () => {
-        console.log('Second');
-    }
-    */
-
-    const second = () => {
-        setTimeout(() => {
-            console.log(`Async Hey there`);
-        }, 2000);
-    }
-    
-    const first = () => {
-        console.log('Hey there');
-        second();
-        console.log('The end');
-    }
-
-    first();
+<script src="script.js">
 
 </script>
     
